%% Generated by dbt Studio from target/manifest.json
%% Relationship kinds: declared (tested) / lineage (ref) / inferred (naming)
erDiagram
    gl_entries {
        int64 document_number FK
        int64 company_code FK
        int64 fiscal_year
        date posting_date
        string document_type
        int64 gl_account
        string cost_center
        numeric amount_local
        string currency
        string debit_credit
        string vendor_customer
        string description
    }
    bronze_gl_entries {
        string gl_entry_key PK
        int64 document_number FK
        int64 company_code FK
        int64 fiscal_year
        date posting_date
        string document_type
        int64 gl_account
        string cost_center
        string currency
        string debit_credit
        string vendor_customer
        string description
        numeric amount_local
        string _source_relation
        timestamp _bronze_loaded_at
        string _dbt_invocation_id
        string _dbt_target
    }
    silver_gl_entries {
        string gl_entry_key PK
        int64 document_number FK
        int64 company_code FK
        int64 fiscal_year
        date posting_date
        date period_month
        int64 period_year
        int64 period_quarter
        string document_type
        int64 gl_account
        string cost_center
        string currency
        string debit_credit
        string vendor_customer
        string description
        string transaction_category
        string account_group
        numeric amount_local
        numeric amount_abs
        numeric debit_amount
        numeric credit_amount
        boolean _has_unmapped_doc_type
        boolean _has_sign_conflict
        boolean _is_missing_counterparty
        boolean _is_zero_amount
        string _source_relation
        timestamp _bronze_loaded_at
        timestamp _silver_loaded_at
        string _dbt_invocation_id
        string _dbt_target
    }
    gold_gl_monthly_summary {
        string gl_summary_key PK
        int64 company_code FK
        date period_month
        int64 period_year
        int64 period_quarter
        string account_group
        string transaction_category
        int64 entry_count
        int64 document_count
        int64 counterparty_count
        numeric debit_amount_mtd
        numeric credit_amount_mtd
        numeric net_amount_mtd
        numeric gross_amount_mtd
        numeric avg_entry_amount
        numeric max_entry_amount
        int64 unmapped_doc_type_count
        int64 sign_conflict_count
        int64 missing_counterparty_count
        numeric debit_amount_ytd
        numeric credit_amount_ytd
        numeric net_amount_ytd
        boolean _is_positive_mtd
        boolean _is_positive_ytd
        boolean _is_sign_clean
        timestamp _silver_loaded_at
        timestamp _gold_loaded_at
        string _dbt_invocation_id
        string _dbt_target
    }
    my_first_dbt_model_testing {
        int64 id PK
    }
    my_second_dbt_model_testing {
        int64 id PK
    }

    gl_entries }o--o{ bronze_gl_entries : "lineage on company_code+document_number"
    my_first_dbt_model_testing ||--|| my_second_dbt_model_testing : "lineage on id"
    silver_gl_entries }o--o{ gold_gl_monthly_summary : "lineage on company_code"
    bronze_gl_entries ||--|| silver_gl_entries : "lineage on gl_entry_key"
